testdata/baselines/reference/submodule/conformance/jsdocTypeTagCast.errors.txt
b.js(2,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'W' must be of type 'string', but here has type 'number'.
b.js(4,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'W' must be of type 'string', but here has type 'number'.
b.js(12,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'string'.
b.js(13,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'any', but here has type 'string'.
b.js(17,14): error TS2339: Property 'p' does not exist on type 'SomeBase'.
b.js(23,14): error TS2339: Property 'x' does not exist on type 'SomeDerived'.
b.js(28,14): error TS2339: Property 'q' does not exist on type 'SomeOther'.


==== a.ts (0 errors) ====
    var W: string;
    
==== b.js (7 errors) ====
    // @ts-check
    var W = /** @type {string} */(/** @type {*} */ (4));
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'W' must be of type 'string', but here has type 'number'.
!!! related TS6203 a.ts:1:5: 'W' was also declared here.
    
    var W = /** @type {string} */(4); // Error
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'W' must be of type 'string', but here has type 'number'.
!!! related TS6203 a.ts:1:5: 'W' was also declared here.
    
    /** @type {*} */
    var a;
    
    /** @type {string} */
    var s;
    
    var a = /** @type {*} */("" + 4);
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type 'any', but here has type 'string'.
!!! related TS6203 b.js:7:5: 'a' was also declared here.
    var s = "" + /** @type {*} */(4);
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 's' must be of type 'any', but here has type 'string'.
!!! related TS6203 b.js:10:5: 's' was also declared here.
    
    class SomeBase {
        constructor() {
            this.p = 42;
                 ~
!!! error TS2339: Property 'p' does not exist on type 'SomeBase'.
        }
    }
    class SomeDerived extends SomeBase {
        constructor() {
            super();
            this.x = 42;
                 ~
!!! error TS2339: Property 'x' does not exist on type 'SomeDerived'.
        }
    }
    class SomeOther {
        constructor() {
            this.q = 42;
                 ~
!!! error TS2339: Property 'q' does not exist on type 'SomeOther'.
        }
    }
    
    function SomeFakeClass() {
        /** @type {string|number} */
        this.p = "bar";
    }
    
    // Type assertion should check for assignability in either direction
    var someBase = new SomeBase();
    var someDerived = new SomeDerived();
    var someOther = new SomeOther();
    var someFakeClass = new SomeFakeClass();
    
    someBase = /** @type {SomeBase} */(someDerived);
    someBase = /** @type {SomeBase} */(someBase);
    someBase = /** @type {SomeBase} */(someOther); // Error
    
    someDerived = /** @type {SomeDerived} */(someDerived);
    someDerived = /** @type {SomeDerived} */(someBase);
    someDerived = /** @type {SomeDerived} */(someOther); // Error
    
    someOther = /** @type {SomeOther} */(someDerived); // Error
    someOther = /** @type {SomeOther} */(someBase); // Error
    someOther = /** @type {SomeOther} */(someOther);
    
    someFakeClass = someBase;
    someFakeClass = someDerived;
    
    someBase = someFakeClass; // Error
    someBase = /** @type {SomeBase} */(someFakeClass);
    
    // Type assertion cannot be a type-predicate type
    /** @type {number | string} */
    var numOrStr;
    /** @type {string} */
    var str;
    if(/** @type {numOrStr is string} */(numOrStr === undefined)) { // Error
    	str = numOrStr; // Error, no narrowing occurred
    }
    
    
    var asConst1 = /** @type {const} */(1);
    var asConst2 = /** @type {const} */({
        x: 1
    });